<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:text="Description:" />

        <EditText
            android:id="@+id/edit_description_ingredient_storage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="10dp"
            android:hint="Enter description"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Amount:"
            android:layout_marginLeft="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_amount_ingredient_storage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="10dp"
            android:hint="Enter amount"
            android:inputType="numberDecimal" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="6dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:text="Category:" />

        <Spinner
            android:id="@+id/edit_category_ingredient_storage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:spinnerMode="dialog"
            android:layout_weight="2" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:text="Location:" />

        <Spinner
            android:id="@+id/edit_location_ingredient_storage"
            android:layout_width="0dp"
            android:spinnerMode="dialog"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:text="Unit:" />

        <Spinner
            android:id="@+id/edit_unit_ingredient_storage"
            android:layout_width="0dp"
            android:spinnerMode="dialog"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="60dp"
            android:text="Best Before:" />

        <TextView
            android:id="@+id/bestBeforeDateAddIngredientToStorage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:text="Select Date" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/select_bestbefore_button"
            android:layout_width="0dp"
            android:layout_marginHorizontal="65dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Select a Date" />

    </TableRow>

</TableLayout>