<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize">

    <ImageButton
        android:id="@+id/logout_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_logout_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="DietScoop"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/add_button"
        app:layout_constraintStart_toEndOf="@+id/logout_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_baseline_add_circle_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>